--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   sqflite: ^2.3.0
   firebase_core: ^2.17.0
   cloud_firestore: ^4.9.3
-  camera: ^0.10.5+5
+  get: ^4.6.6
+  firebase_auth: ^4.10.1
+  
 
 dev_dependencies:
   flutter_test:
